--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
       <script src="assets/javascripts/bundle.9b151c6a.min.js"></script>
      <!-- ADDS GOOGLE API WITH API KEY -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXv29cjGoYgAy0VD5MVexGcdlXwd0eohg&callback=myMap" defer > </script>
+    <script src="https://maps.googleapis.com/maps/api/geocode/json?place_id=ChIJeRpOeF67j4AR9ydy_PIzPuM&key=AIzaSyDXv29cjGoYgAy0VD5MVexGcdlXwd0eohg&callback=myMap" defer > </script>
     
   </body>
 </html>
