--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
                     
                     //Grabs addresses from input text
                     function grabAddress(){
-
+                      //Creates the Geocoder
+                      const geocoder = new google.maps.Geocoder();
                       var latStrt;
                       var lngStrt;
                       var latEnd;
