--- a/index.html
+++ b/index.html
@@ -186,6 +186,10 @@
                     
                     //Grabs addresses from input text
                     function grabAddress(){
+                      var latStrt;
+                      var lngStrt;
+                      var latEnd;
+                      var lngEnd;
 
                       var start = document.getElementById("start").value;
                       var end = document.getElementById("end").value;
