--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
                   <input type="text" id="start2" name="start2Txt" size="20" style="color: black" placeholder="&quot;Lat: Lng:&quot;"/>
                   <div></div>
                   <label for="end">Ending Address:&nbsp;&nbsp;</label>
-                  <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="&quot;321 N 4th St&quot; or Lat: Lng:"/>
+                  <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="&quot;321 N 4th St&quot;"/>
                   <label for="end2">Ending Location:&nbsp;&nbsp;</label>
                   <input type="text" id="end2" name="end2Txt" size="20" style="color: black" placeholder="&quot;Lat: Lng:&quot;"/>
                  
                   <div></div>
                   <button class="button button1" id="enter"> Address Enter </button>
-                  <button class="button button1" id="enter2"> Location Enter </button>
+                  <button class="button button1" id="enter2" style='margin-right:16px'> Location Enter </button>
                   <!-- testing js code -->
                   <script> 
                     document.getElementById("enter").addEventListener("click", grabAddress);
