--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
                   <input type="text" id="end2" name="end2Txt" size="20" style="color: black" placeholder="&quot;Lat: Lng:&quot;"/>
                  
                   <div></div>
-                  <button class="button button1" id="enter" style="margin-right:32px;"> Address Enter </button>
-                  <button class="button button1" id="enter2" style="margin-left:64px;"> Location Enter </button>
+                  <button class="button button1" id="enter"> Address Enter </button>
+                  <button class="button button1" id="enter2" style="margin-left:128px;"> Location Enter </button>
                   <!-- testing js code -->
                   <script> 
                     document.getElementById("enter").addEventListener("click", grabAddress);
