--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@
                 <!-- Creates text and then an input for text -->
                   <label for="start">Starting Address:</label>
                   <input type="text" id="start" name="startTxt" size="20" style="color: black" placeholder="&quot;123 N 3rd St&quot;"/>
-                  <label for="start2">Starting Location:</label>
+                  <label for="start2" style="margin-left:32px;">Starting Location:</label>
                   <input type="text" id="start2" name="start2Txt" size="20" style="color: black" placeholder="&quot;Lat: Lng:&quot;"/>
                   <div></div>
                   <label for="end">Ending Address:&nbsp;&nbsp;</label>
                   <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="&quot;321 N 4th St&quot;"/>
-                  <label for="end2">Ending Location:&nbsp;&nbsp;</label>
+                  <label for="end2" style="margin-left:32px;">Ending Location:&nbsp;&nbsp;</label>
                   <input type="text" id="end2" name="end2Txt" size="20" style="color: black" placeholder="&quot;Lat: Lng:&quot;"/>
                  
                   <div></div>
