--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                   <!-- testing js code -->
                   <script> 
                     document.getElementById("enter").addEventListener("click", grabAddress);
-                   // document.getElementById("enter").addEventListener("click", searchAddress);
+                    document.getElementById("enter2").addEventListener("click", geocodeCoord);
                     //button.addEventListener('click', onButtonClick);
                     
                     //Grabs addresses from input text
