--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
                   <div></div>
                   <button class="button button1" id="enter">Enter Address</button>
                   <button class="button button1" id="enter2" style="margin-left:178px;">Enter Location</button>
+
+                  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+              
                   <!-- testing js code -->
                   <script> 
                     document.getElementById("enter").addEventListener("click", grabAddress);
