--- a/index.html
+++ b/index.html
@@ -206,14 +206,27 @@
                         if(latlngStrt[1].substring(0,2) == "-8") lngStrt = latlngStrt[1];
                         else lngStrt = latlngStrt[1].substring(7,latlngStrt[1].length-1);
                         const latlngS = latStrt + "," + lngStrt;
-                        document.getElementById("test").innerHTML = latlngS;
-                        const latlngStr = latlngS.split(",",2);
+                        alert(latlngS);
+                        //document.getElementById("test").innerHTML = latlngS;
+                        /*const latlngStr = latlngS.split(",",2);
                         const startCoord = {
                           lat: parseFloat(latlngStr[0]),
                           lng: parseFloat(latlngStr[1]),
-                        };
-                        getGeocode(startCoord);
-                      }
+                        };*/
+                        //getGeocode(startCoord);    https://maps.googleapis.com/maps/api/geocode/json?latlng=40.714224,-73.961452&key=YOUR_API_KEY
+                       /* axios.get('https:maps.googleapis.com/maps/api/geocode/json?',{
+                          params:{
+                            location: latlngS,
+                            key:'AIzaSyDXv29cjGoYgAy0VD5MVexGcdlXwd0eohg'
+                          }
+                        })
+                        .then(function(response){
+                          console.log(response);
+                        })
+                        .catch(function(error){
+                          console.log(error);
+                        });
+                      }*/
                       /*if(end.charAt(0) == '{' || end.charAt(0) == '4'){
                         const latlngEnd = end.split(",",2);
                         if(latlngEnd[0].substring(0,1) == "4")latEnd = latlngEnd[0];
