--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
                           lat: parseFloat(latlngStr[0]),
                           lng: parseFloat(latlngStr[1]),
                         };
-                        getGeocode(endCoord);
-                      }       */                                          
+                        getGeocode(endCoord);  */
+                      }                                                
                     }
                     function getGeocode(coord){
                       //START GEOCODE
@@ -277,20 +277,7 @@
                       //alert(start + ' ' + end);
                     }
                   </script>
-                  <script>
-                    function customRoute(start, end){
-                      //Finds Street object with matching address
-                      //Uses geolocation to create marker for start location
-                      //Get Elevation
-                      //Find Intersections connected to starting Street
-                      //Compare start Elevation to Elevation of each Intersections
-                      //Use Algorithm to determine where to go
-                      //Use geolocation for end point of custom route
-                      //Add custom route to array of custom routes to concatonate to a complete route
-                    }
-
-                  </script>
-
+            
               <!-- ADDS JAVASCRIPT FILE TO INDEX.HTML -->
               <!-- CREATES MAP AND ADDRESS INPUT PLUS BUTTONS -->
               <script type="module" src="map.js"> </script>
