--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                           lng: parseFloat(latlngStr[1]),
                         };*/
                         //getGeocode(startCoord);    https://maps.googleapis.com/maps/api/geocode/json?latlng=40.714224,-73.961452&key=YOUR_API_KEY
-                       /* axios.get('https:maps.googleapis.com/maps/api/geocode/json?',{
+                        axios.get('https:maps.googleapis.com/maps/api/geocode/json?',{
                           params:{
                             location: latlngS,
                             key:'AIzaSyDXv29cjGoYgAy0VD5MVexGcdlXwd0eohg'
@@ -226,7 +226,7 @@
                         .catch(function(error){
                           console.log(error);
                         });
-                      }*/
+                      }
                       /*if(end.charAt(0) == '{' || end.charAt(0) == '4'){
                         const latlngEnd = end.split(",",2);
                         if(latlngEnd[0].substring(0,1) == "4")latEnd = latlngEnd[0];
