--- a/index.html
+++ b/index.html
@@ -240,8 +240,9 @@
                           lat: parseFloat(latlngStr[0]),
                           lng: parseFloat(latlngStr[1]),
                         };
-                        getGeocode(endCoord);  */
-                      }                                                
+                        getGeocode(endCoord); 
+                      }  */
+                                                                   
                     }
                     function getGeocode(coord){
                       //START GEOCODE
