--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                           lng: parseFloat(latlngStr[1]),
                         };*/
                         //getGeocode(startCoord);    https://maps.googleapis.com/maps/api/geocode/json?latlng=40.714224,-73.961452&key=YOUR_API_KEY
-                        axios.get('https:maps.googleapis.com/maps/api/geocode/json?',{
+                        axios.get('https:maps.googleapis.com/maps/api/geocode/json',{
                           params:{
                             location: latlngS,
                             key:'AIzaSyDXv29cjGoYgAy0VD5MVexGcdlXwd0eohg'
