--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         //getGeocode(startCoord);    https://maps.googleapis.com/maps/api/geocode/json?latlng=40.714224,-73.961452&key=YOUR_API_KEY
                         axios.get('https:maps.googleapis.com/maps/api/geocode/json',{
                           params:{
-                            location: latlngS,
+                            latlng: latlngS,
                             key:'AIzaSyDXv29cjGoYgAy0VD5MVexGcdlXwd0eohg'
                           }
                         })
