--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                           }
                         })
                         .then(function(response){
-                          console.log(response);
+                          //console.log(response);
                           //formatted address
                           console.log(response.data.results[0].address_components[0].short_name);
                           console.log(response.data.results[0].address_components[1].short_name);
