--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         .then(function(response){
                           //console.log(response);
                           //formatted address
-                          startAddy = "" + response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name + "";
+                          startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
                         })
                         .catch(function(error){
                           console.log(error);
@@ -243,7 +243,7 @@
                         .then(function(response){
                           //console.log(response);
                           //formatted address
-                          endAddy = "" + response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name + "";
+                          endAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
                         })
                         .catch(function(error){
                           console.log(error);
