--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                           console.log(error);
                         });
                       }
-                      alert(startAddy + " " + endAddy);                                          
+                      //alert(startAddy + " " + endAddy);                                          
                     }
                     function getGeocode(coord){
                       //START GEOCODE
