--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@
                       var end = document.getElementById("end2").value;
                       var startAddy = "";
                       var endAddy = "";
+                      var startAddyOutput;
+                      var endAddyOutput;
 
                       //START INPUT
                       if(start.charAt(0) == '{' || start.charAt(0) == '4'){
@@ -219,8 +221,14 @@
                         .then(function(response){
                           //console.log(response);
                           //formatted address
-                          //startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
-                          alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
+                          startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
+                          //alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
+                          startAddyOutput = `
+                            <ul class="list-group">
+                              <li class="list-group-item">${startAddy}</li>
+                            </ul>
+                          `;
+                          document.getElementById('test').innerHTML = startAddyOutput;
                         })
                         .catch(function(error){
                           console.log(error);
@@ -244,8 +252,8 @@
                         .then(function(response){
                           //console.log(response);
                           //formatted address
-                          //endAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
-                          alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
+                          endAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
+                          /alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
                         })
                         .catch(function(error){
                           console.log(error);
