--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                       }
                       //alert(startAddy + " " + endAddy);                                          
                     }
-                    function getGeocode(coord){
+                    /*function getGeocode(coord){
                       //START GEOCODE
                       const geocoder = new google.maps.Geocoder();
                       geocoder.geocode({ location: coord})
@@ -273,7 +273,7 @@
                         else alert("No results found");
                       })
                       .catch((e) => window.alert("Geocoder failed due to: " + e));
-                    }
+                    }  */
                     
                     //Grabs addresses from input text
                     function grabAddress(){
