--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
                           console.log(error);
                         });
                       }
-                      var route = "" + startAddy + " " + endAddy + "";
-                      alert(route);                                          
+                      //var route = "" + startAddy + " " + endAddy + "";
+                      alert(startAddy + " " + endAddy);                                          
                     }
                     /*function getGeocode(coord){
                       //START GEOCODE
