--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         .then(function(response){
                           console.log(response);
                           //formatted address
-                          startAddy = new String(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
+                          startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
                           //alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
                           
                           //document.getElementById('test').innerHTML = startAddy;
@@ -246,7 +246,7 @@
                         .then(function(response){
                           //console.log(response);
                           //formatted address
-                          endAddy = new String(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
+                          endAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
                           //alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
                         })
                         .catch(function(error){
