--- a/index.html
+++ b/index.html
@@ -254,7 +254,8 @@
                         });
                       }
                       //var route = "" + startAddy + " " + endAddy + "";
-                      alert(startAddy + " " + endAddy);                                          
+                      alert(startAddy);         
+                      alert(endAddy);
                     }
                     /*function getGeocode(coord){
                       //START GEOCODE
