--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
                       var lngEnd;
                       var start = document.getElementById("start2").value;
                       var end = document.getElementById("end2").value;
-                      var startAddy = "";
-                      var endAddy = "";
+                      var startAddy;
+                      var endAddy;
 
                       //START INPUT
                       if(start.charAt(0) == '{' || start.charAt(0) == '4'){
