--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
                           console.log(error);
                         });
                       }
-                      var route = startOutput + endOutput;
-                      document.getElementById('test').innerHTML = route;
+                      //var route = startOutput + endOutput;
+                      document.getElementById('test').innerHTML = startOutput;
                     }
                     /*function getGeocode(coord){
                       //START GEOCODE
