--- a/index.html
+++ b/index.html
@@ -226,7 +226,9 @@
                           console.log(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
                           //document.getElementById('test').innerHTML = startAddy;
                           startOutput = `
-                            <p>${startAddy}</p>
+                            <ul class="list-group">
+                              <li class="list-group-item">${startAddy}</li>
+                            </ul>
                           `;
                         })
                         .catch(function(error){
